--- a/arch/arm64/boot/dts/freescale/qls1046a-4gb.dts
+++ b/arch/arm64/boot/dts/freescale/qls1046a-4gb.dts
@@ -7,7 +7,7 @@
  *
  * Mingkai Hu <mingkai.hu@nxp.com>
  *
- * Copyright 2020 Scalys
+ * Copyright 2021 Scalys
  *
  * opensource@scalys.com
  */
@@ -18,7 +18,7 @@
 
 / {
 	model = "QLS1046A-4GB dev Board";
-	compatible = "fsl,ls1046a-rdb", "fsl,ls1046a";
+	compatible = "fsl,ls1046a";
 
 	aliases {
 		serial0 = &duart0;
@@ -264,15 +264,23 @@
 		phy-handle = <&rgmii_phy2>;
 		phy-connection-type = "rgmii";
 	};
-	
+
 	ethernet@e8000 {
 		phy-connection-type = "sgmii";
-		status = "disabled";
+		status = "okay";
+		fixed-link {
+			speed = <1000>;
+			full-duplex;
+		};
 	};
 
 	ethernet@ea000 {
 		phy-connection-type = "sgmii";
-		status = "disabled";
+		status = "okay";
+		fixed-link {
+			speed = <1000>;
+			full-duplex;
+		};
 	};
 
 	ethernet@f0000 { /* 10GEC1 */
